Color fix on mobile

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -42,6 +42,7 @@ header {
             background: none;
             border: none;
             font: inherit;
+            color: black;
             cursor: pointer;
         }
 
